--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,59 @@
 body {
     background-color: #fff;
-    font-family: Sans-Serif, Helvetica, Arial;
+}
+.navbar {
+    background-color: #ccccaa;
+    margin: auto;
+    top:0;
+    width:100%;
+    height: 50px;
+    display: flex;
+    
+}
+ul li {
+    background-color: gray;
+    padding: 3px;
     font-size: 20px;
+    display: inline;
+    flex-flow: row; 
+    justify-content: space-around;
 }
 .container {
-     background-color: #676785;
-    margin:0, auto;
-   display:flex;
+    display: flex;
     justify-content: space-between;
-    padding:20px, 0;
-    max-width: 1029px;
     width:100%;
+
 }
 .container__left {
-    background:url("./mockups/mf-kr.jpeg");
-    position: absolute;
+    background-image:linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5)),url("") ;
     flex-flow: row;
-    top:0;
-    left:0;
-    height:100%;
-    width:50%;
+    width: 50%;
+    padding:30px;
 }
 .container__right {
-    position:absolute;
-    padding-right: 5%;
-    right:0;
-    transform: none;
-    text-align: center;
-    width:30%;  
+    width: 50%;
+}
+.container-row {
+    display: flex;
+    justify-content: space-between;
+    padding: 3px;
+}
+.container-row__short-cut {
+
+   
+    flex-flow: row;
+    margin: auto;
+
+    
+    display: inline-block;
+    
 }
 .footer {
+    background-color: #ccccaa;
+    margin: auto;
+    bottom:0;
+    width:100%;
+    height: 50px;
     display: inline-block;
-    position: absolute;
-    background-color: grey;
-    right:0;
-    width: 50%;
-    bottom: 0;
+    
 }
