--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 body {
     background-color: #fff;
+    height: 100%;
+    font-size: 1.5em;
 }
 .navbar {
     background-color: #ccccaa;
@@ -22,6 +24,7 @@ ul li {
     display: flex;
     justify-content: space-between;
     width:100%;
+    padding: 30px;
 
 }
 .container__left {
@@ -31,6 +34,7 @@ ul li {
     padding:30px;
 }
 .container__right {
+    padding:30px;
     width: 50%;
 }
 .container-row {
@@ -39,21 +43,17 @@ ul li {
     padding: 3px;
 }
 .container-row__short-cut {
-
-   
     flex-flow: row;
-    margin: auto;
-
-    
+    margin: 3px;
     display: inline-block;
-    
 }
 .footer {
     background-color: #ccccaa;
-    margin: auto;
     bottom:0;
     width:100%;
-    height: 50px;
+    height: 40px;
+    padding-bottom: 20px;
+    text-align: center;
     display: inline-block;
     
 }
